# dsc-commands-remover

./: Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
src/: cli.rs  lib.rs  main.rs
