[package]
name = "dsc-commands-remover"
version = "0.2.0"
edition = "2021"
readme = "README.md"
authors = ["Aleksei Rybin <0xalekseirybin@gmail.com>"]
repository = "https://github.com/tapris-bot/dsc-commands-remover/"
description = "CLI tool to unregister all slash commands for a discord bot"
keywords = ["terminal", "cli"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
dialoguer = "0.11"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
