[package]
name = "dsc-commands-remover"
version = "0.3.0"
edition = "2021"
readme = "README.md"
authors = ["Aleksei Rybin <0xalekseirybin@gmail.com>"]
description = "CLI tool to unregister all slash commands for a discord bot"
license = "MIT"

# Don't forget to update `.github/workflows/test.yml`
rust-version = "1.74"

documentation = "https://docs.rs/dsc-commands-remover"
repository = "https://github.com/tapnisu/dsc-commands-remover"
homepage = "https://github.com/tapnisu/dsc-commands-remover"
keywords = ["terminal", "cli"]
categories = ["command-line-utilities"]
exclude = [".github/*"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
